feat: add spotify track functionality

--- a/locales/en.json
+++ b/locales/en.json
@@ -65,6 +65,9 @@
     "queueEnded": "❌ Music queue ended.",
     "queueError": "Error: {error}",
     "startedPlaying": "🎶 Started playing: **{title}** {url}",
+    "startedPlayingThumbnail": "Started playing: **{title}**",
+    "requestedBy": "Requested by {name}",
+    "musicPlayerTitle": "🎶 Evelyn is playing!",
     "skipSong": "<@{author}> ⏩ skipped the song",
     "pauseSong": "<@{author}> ⏸ paused the music.",
     "resumeSong": "<@{author}> ▶ resumed the music!",
